--- a/src/css/todo_style.css
+++ b/src/css/todo_style.css
@@ -108,6 +108,10 @@
     color: var(--swatch-text-accent);
 }
 
+.hide{
+    visibility: hidden;
+}
+
 #add-item-button, #delete-list-button, #close-list-button {
     text-align: center;
 }
