--- a/src/css/todo_layout.css
+++ b/src/css/todo_layout.css
@@ -83,10 +83,16 @@
 }
 
 #todo-list-items-div {
-    height:96%;
+    /* height:96%;
     top:7%;
     display: flex;
+    flex-direction: column; */
+    height: 700px;
+    min-height: 100%;
+    display: flex;
     flex-direction: column;
+    align-content: center;
+    margin-right: 1px;
 }
 
 .list-item-card {
@@ -94,6 +100,7 @@
     height: 45px;
     display: flex;
     flex-direction: row;
+    border-bottom: 1px solid;
 }
 
 .item-col {
@@ -110,7 +117,47 @@
     width: 20%;
 }
 
-.task-col {
+.item-button {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+
+}
+
+h4 {
+    display: block;
+    margin-block-start: 1.33em;
+    margin-block-end: 1.33em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
+
+.text-display{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: right;
+    align-self: flex-start;
+    justify-content: flex-start;
+    text-align: start;
+    margin: 0;
+}
+
+.button-trio{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    float: left;
+    height: 100%;
+}
+
+.test{
+    width:98%
+}
+
+/* .task-col {
     width:25%;
 }
 
@@ -120,4 +167,4 @@
 
 .status-col {
     width:25%
-}
+} */
