--- a/src/css/todo_layout.css
+++ b/src/css/todo_layout.css
@@ -69,7 +69,7 @@
 }
 
 .todo-button {
-    white-space: nowrap;
+    /* white-space: nowrap; */
 }
 
 #left-sidebar-controls {
@@ -101,6 +101,7 @@
     display: flex;
     flex-direction: row;
     border-bottom: 1px solid;
+    
 }
 
 .item-col {
@@ -134,7 +135,7 @@ h4 {
 }
 
 .text-display{
-    width: 100%;
+    /* width: 100%; */
     height: 100%;
     display: flex;
     align-items: right;
@@ -157,14 +158,18 @@ h4 {
     width:98%
 }
 
-/* .task-col {
-    width:25%;
+.task-col {
+    min-width: 25%;
+    max-width: 100%;
 }
 
 .due-date-col {
-    width:25%;
+    min-width: 25%;
+    max-width: 100%;
 }
 
 .status-col {
-    width:25%
-} */
+    min-width: 25%;
+    max-width: 100%;
+}
+
