--- a/src/css/todo_layout.css
+++ b/src/css/todo_layout.css
@@ -173,3 +173,53 @@ h4 {
     max-width: 100%;
 }
 
+.modal {
+    display: block;
+    position: fixed;
+    z-index: 1;
+    left: 35%;
+    top: 25%;
+    width: 30%;
+    animation: appear_in .3s ease;
+}
+
+.modal-header {
+    margin: 4%;
+    display: flex;
+    flex-direction: row;
+    height: 1%;
+    align-items: center;
+    align-content: center;
+    justify-content: space-between;
+}
+
+.modal-overlay {
+    display: block;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.modal-button {
+    margin-bottom: 2%;
+    margin-right: 2%;
+    margin-top: 2%;
+    width: 20%;
+    padding: 2%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3px;
+    position: relative;
+}
+
+.item-button {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+}
+
