--- a/src/css/todo_layout.css
+++ b/src/css/todo_layout.css
@@ -69,7 +69,7 @@
 }
 
 .todo-button {
-    /* white-space: nowrap; */
+    white-space: nowrap;
 }
 
 #left-sidebar-controls {
@@ -88,23 +88,53 @@
     display: flex;
     flex-direction: column; */
     height: 700px;
-    min-height: 100%;
-    display: flex;
+    min-height: 75%;
+    display: block;
     flex-direction: column;
     align-content: center;
     margin-right: 1px;
 }
 
-.list-item-card {
-    padding-top:20px;
+.list-header-card {
     height: 45px;
     display: flex;
     flex-direction: row;
+    /*border-bottom: 1px solid;*/
+}
+
+.list-item-card {
+    padding-top:20px;
+    min-height: 8%;
+    display: flex;
+    flex-direction: row;
     border-bottom: 1px solid;
-    
+    hyphens: auto;
+}
+
+.list-item-label {
+    padding-top:20px;
+    height: 8%;
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px solid;
+    hyphens: auto;
+}
+
+.list-input-card {
+    min-height: 8%;
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px solid;
+    padding-top: 14px;
+    padding-bottom: 14px;
 }
 
 .item-col {
+    width:25%;
+    max-width: 25%;
+}
+
+.full-item-col {
     width:25%;
 }
 
@@ -126,16 +156,18 @@
 }
 
 h4 {
-    display: block;
+    display: flex;
     margin-block-start: 1.33em;
     margin-block-end: 1.33em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     font-weight: bold;
+    justify-content: flex-start;
 }
 
 .text-display{
     /* width: 100%; */
+    /*padding-top:20px;*/
     height: 100%;
     display: flex;
     align-items: right;
@@ -143,6 +175,7 @@ h4 {
     justify-content: flex-start;
     text-align: start;
     margin: 0;
+    
 }
 
 .button-trio{
@@ -154,8 +187,9 @@ h4 {
     height: 100%;
 }
 
-.test{
-    width:98%
+.width{
+    width:98%;
+    justify-content: flex-start;
 }
 
 .task-col {
@@ -215,11 +249,5 @@ h4 {
     justify-content: center;
     border-radius: 3px;
     position: relative;
-}
-
-.item-button {
-    display: flex;
-    flex-direction: row;
-    align-content: center;
 }
 
